--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,15 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 48,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
-"selection": false,
+"row": 24,
+"scroll_position": 5.0,
+"selection": true,
+"selection_from_column": 48,
+"selection_from_line": 24,
+"selection_to_column": 27,
+"selection_to_line": 25,
 "syntax_highlighter": "GDScript"
 }
